--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,15 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": ["Aufgabe_2/test.fdd"]
+        },
+        {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": ["-f" , "tutorial/all_day.csv"]
         }
+
     ]
 }
