Jasonfile laden funktioniert

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,24 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["Aufgabe_2/main.py"]
+        },
+
+        {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": ["Aufgabe_2/test.fdd"]
+        },
+
+        {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": ["Aufgabe_3/test.fdd"]
         }
     ]
 }
