--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["Aufgabe_3/test.fdd"]
+            "args": ["Aufgabe_3/test.fdd"],
         }
     ]
 }
